<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <Button
        android:id="@+id/btnSaltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saltar4"
        android:layout_margin="16dp"
        android:layout_gravity="top|end"/>

    <LinearLayout
        android:id="@+id/bocadillo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:background="@drawable/bocadillo">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bocadillo3"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente3"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</FrameLayout>