<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:clickable="false"
    android:focusable="false">

    <Button
        android:id="@+id/btnSaltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saltar3"
        android:layout_margin="16dp"
        android:layout_gravity="top|end"/>
    <ImageView
        android:id="@+id/mundo1"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@drawable/mundo1"
        android:scaleType="centerCrop"
        android:contentDescription="Mundo 1"/>

    <LinearLayout
        android:id="@+id/bocadillo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="120dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:background="@drawable/bocadillo"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bocadillo"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente2"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

</FrameLayout>